# aws-solutions

./: .gitignore  LICENSE  README.md
lowcode-transactional-datalake/: README.md  cdk.json  cdk_app.py  pyproject.toml
lowcode-transactional-datalake/lowcode_transactional_datalake/clean_s3_lambda/: lambda_function.py
lowcode-transactional-datalake/lowcode_transactional_datalake/glue_csv_to_parquet/: csv_to_parquet.py
lowcode-transactional-datalake/lowcode_transactional_datalake/lambda_clean_s3/: lambda_function.py
lowcode-transactional-datalake/lowcode_transactional_datalake/parquet_to_hudi_glue/: parquet_to_hudi_glue.py
lowcode-transactional-datalake/lowcode_transactional_datalake/trigger_lambda/: lambda_function.py
lowcode-transactional-datalake/tests/: cdc-day1.csv  cdc-day2.csv  cdc-day3.csv  day2.csv  day3.csv
